[package]
name = "vale-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.88"
ansi_brush = "0.0.31"
regex = "1.7.0"
